--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^8.0.0",
         "express": "^4.15.2",
         "express-handlebars": "^3.0.0",
+        "method-override": "^3.0.0",
         "mongoose": "^5.5.5",
         "morgan": "^1.8.1",
         "socket.io": "^2.2.0",
