--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.17.1",
+        "bootstrap": "^4.3.1",
         "dotenv": "^8.0.0",
         "express": "^4.15.2",
         "express-handlebars": "^3.0.0",
         "method-override": "^3.0.0",
+
         "mongoose": "^5.5.5",
         "morgan": "^1.8.1",
+        "popper": "^1.0.1",
         "socket.io": "^2.2.0",
         "underscore": "^1.9.1"
     }
