--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "express": "^4.15.2",
         "express-handlebars": "^3.0.0",
         "method-override": "^3.0.0",
-
+        "jquery": "^3.4.1",
         "mongoose": "^5.5.5",
         "morgan": "^1.8.1",
         "popper": "^1.0.1",
